# stt

./: .env.example  .gitignore  README.md  WINDOWS_DEPLOYMENT.md  config.py  requirements.txt  setup.sh  stt_recorder_app.py  whisper-hs.cabal
app/: Main.hs
scripts/: DEPRECATED.md  whisper_wrapper.py
src/STT/: App.hs  Audio.hs  Config.hs  LLM.hs  Markdown.hs  PostProcess.hs  Whisper.hs
test/: Main.hs
test/fixtures/: test.env  whisper-response.json
whisper-hs/: .env.example  README.md  whisper-hs.cabal
whisper-hs/src/STT/: App.hs  Audio.hs  Config.hs  LLM.hs  Markdown.hs  PostProcess.hs  Whisper.hs
